testing/testmath1.data.result
1 + 2 - 3 + 4 
Result:  4.0 
Expected:  4
________________

(1 + 2) - (3 + 4) 
Result:  -4.0 
Expected:  -4
________________

1 + (2 - 3) + 4 
Result:  4.0 
Expected:  4
________________

(1 + (2 - 3)) + 4 
Result:  4.0 
Expected:  4
________________

1 + ((2 - 3) + 4) 
Result:  4.0 
Expected:  4
________________

(1 + 2) * (3 + 4) 
Result:  21.0 
Expected:  21
________________

(1 + 2) ^ (3 + 4) 
Result:  2187.0 
Expected:  2187
________________

(1 + 2) / (3 + 4) 
Result:  0.42857 
Expected:  0.4286
________________

(3 + 4) % (1 + 2) 
Result:  1.0 
Expected:   1
________________

2 / 3 / 4 
ERROR: ?? (//)
Expected:  ?? (/)
= = = = = = = 

(2 / 3) / 4 
Result:  0.16667 
Expected:  1.6667
________________

2 / (3 / 4) 
Result:  2.66667 
Expected:  2.6667
________________

((1 + 2) * (3 + 4)) + (5 + 6) 
Result:  32.0 
Expected:  32
________________

((1 + 2) ^ (3 + 4)) * (5 + 6) 
Result:  24057.0 
Expected:  24057
________________

((3 + 4) / (1 + 2)) ^ (5 + 6) 
Result:  11162.06734 
Expected:  11162.067
________________

((3 + 4) % (1 + 2)) / (5 + 6) 
Result:  0.09091 
Expected:  0.0909
________________

7500 - 250 - 500 
Result:  6750.0 
Expected:  6750
________________

x1000 + 100 + 10 + 1 
Result: x 1111 
Expected:  x1111
________________

(2 + 3) ^ 2 
Result:  25.0 
Expected:  25
________________

((2 + 3) * 4) ^ 2 
Result:  400.0 
Expected:  400
________________

((2 + 3) * (4 + 5)) ^ 2 
Result:  2025.0 
Expected:  2025
________________

((2 * 3) + (4 * 5)) ^ 2 
Result:  676.0 
Expected:  676
________________

((2 * 3) / (4 * 5)) ^ 2 
Result:  0.09 
Expected:  0.09
________________

(((2 * 3) + (4 * 5)) ^ 2) + (((2 * 3) / (4 * 5)) ^ 2) 
Result:  676.09 
Expected:  676.09
________________

2 ^(2 + 3) 
Result:  32.0 
Expected:  32
________________

2 ^ (2 + 3) + 2 ^ (2 + 3) 
Result:  45435424.0 
Expected:  34 ^ 5 :: 45435424
________________

(2 ^ (2 + 3)) + (2 ^ (2 + 3)) 
Result:  64.0 
Expected:  64
________________

2 * 2 ^ (2 + 3) 
ERROR: ?? !Op(*^)
Expected:  4 ^ 5 :: 1024
= = = = = = = 

2 * (2 ^ (2 + 3)) 
Result:  64.0 
Expected:  64
________________

2 ^ (3 + 4) / 2 
Result:  64.0 
Expected:  64
________________

(2 ^ (3 + 4)) / 2 
Result:  64.0 
Expected:  64
________________

(2 * (2 ^ (2 + 3))) / 4 
Result:  16.0 
Expected:  16
________________

(3 + 4) ^ (2 + 1) 
Result:  343.0 
Expected:  343
________________

((5 - 2) + 4) ^ ((4 / 2) + 1) 
Result:  343.0 
Expected:  343
________________

((5 - 2) + (6 - 2)) ^ ((4 / 2) + 1) 
Result:  343.0 
Expected:  343
________________

(200000 * (0.06/12)) / (1 - ((1 + (0.06/ 12))^(-12*30))) 
Result:  1199.10105 
Expected:  1199.10
________________

(500000 * 3) / (800000000 / 1sec)  
Result:  0.00188 sec
Expected:   0.002sec
________________

2 ^ 1.6  
Result:  3.03143 
Expected:   3.031
________________

2 ^ 1.6ft  
ERROR: ?? ^ft
Expected:   ?? ^ft
= = = = = = = 

2 ^ (3ft + 2ft)  
ERROR: ?? ^ft
Expected:   ?? ^ft
= = = = = = = 

(4ft + 2ft) ^ 2  
Result:  36.0 ft^2
Expected:   36 ft^2
________________

11.12345 % 3 
Result:  2.12345 
Expected:  2.12345
________________

(2 ^ (2 + 3) * 1.234) / (5.123 % 3) 
Result:  18.60009 
Expected:  18.60009
________________

\4 
Result:  2.0 
Expected:  2
________________

\25 
Result:  5.0 
Expected:  5
________________

\21 
Result:  4.58258 
Expected:  4.58258
________________

\25 + \16 
Result:  9.0 
Expected:  9
________________

\(16 + 9) + \(9 + 7) 
Result:  9.0 
Expected:  9
________________

