testing/testmath1.data

1 + 2 - 3 + 4 = 4
(1 + 2) - (3 + 4) = -4
1 + (2 - 3) + 4 = 4
(1 + (2 - 3)) + 4 = 4
1 + ((2 - 3) + 4) = 4

(1 + 2) * (3 + 4) = 21
(1 + 2) ^ (3 + 4) = 2187
(1 + 2) / (3 + 4) = 0.4286
(3 + 4) % (1 + 2) =  1

2 / 3 / 4 = ?? (/)
(2 / 3) / 4 = 1.6667
2 / (3 / 4) = 2.6667

((1 + 2) * (3 + 4)) + (5 + 6) = 32
((1 + 2) ^ (3 + 4)) * (5 + 6) = 24057
((3 + 4) / (1 + 2)) ^ (5 + 6) = 11162.067
((3 + 4) % (1 + 2)) / (5 + 6) = 0.0909

7500 - 250 - 500 = 6750
x1000 + 100 + 10 + 1 = x1111

(2 + 3) ^ 2 = 25
((2 + 3) * 4) ^ 2 = 400
((2 + 3) * (4 + 5)) ^ 2 = 2025
((2 * 3) + (4 * 5)) ^ 2 = 676
((2 * 3) / (4 * 5)) ^ 2 = 0.09
(((2 * 3) + (4 * 5)) ^ 2) + (((2 * 3) / (4 * 5)) ^ 2) = 676.09
2 ^(2 + 3) = 32
2 ^ (2 + 3) + 2 ^ (2 + 3) = 34 ^ 5 :: 45435424
(2 ^ (2 + 3)) + (2 ^ (2 + 3)) = 64
(2 * 2) ^ (2 + 3) = 4 ^ 5 :: 1024
2 * (2 ^ (2 + 3)) = 64
2 ^ (3 + 4) / 2 = 64
(2 ^ (3 + 4)) / 2 = 64
(2 * (2 ^ (2 + 3))) / 4 = 16
(3 + 4) ^ (2 + 1) = 343
((5 - 2) + 4) ^ ((4 / 2) + 1) = 343
((5 - 2) + (6 - 2)) ^ ((4 / 2) + 1) = 343

(200000 * (0.06/12)) / (1 - ((1 + (0.06/ 12))^(-12*30))) = 1199.10

(500000 * 3) / (800000000 / 1sec)  =  0.002sec

2 ^ 1.6  =  3.031
2 ^ 1.6ft  =  ?? ^ft
2 ^ (3ft + 2ft)  =  ?? ^ft
(4ft + 2ft) ^ 2  =  36 ft^2

11.12345 % 3 = 2.12345
(2 ^ (2 + 3) * 1.234) / (5.123 % 3) = 18.60009

\4 = 2
\25 = 5
\21 = 4.58258
\25 + \16 = 9
\(16 + 9) + \(9 + 7) = 9

